--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -3,20 +3,55 @@ title: Supergraph Architecture Framework
 description: Learn about supergraph best practices and assess your graph's current state
 ---
 
-Whether your supergraph implementation is already underway or just starting, you can use the [Supergraph Architecture Framework](https://saf.apollographql.com/) (SAF) to learn about best practices.
+The Apollo Supergraph Architecture Framework (SAF) provides a collection of best practices in the key pillars of supergraph development, giving architects and platform teams a roadmap that steers your organization to success. Whether you are just starting with a supergraph or have been in production for years, you can assess what areas of you API strategy line up with the best practices Apollo has identified working with countless engineering teams building their supergraph implementations.
 
-### SAF Pillars
+///// TODO: CTA button here instead of small link???
+If you would like to complete the SAF please reach out to your Apollo Customer Success team.
+
+## SAF Pillars
 
 SAF's principles and best practices are centered around five pillars:
 
-- Operation excellence
-- Security
-- Reliability
-- Performance
-- Developer efficiency
+- **Operation excellence**
+  - Efficiently operate, monitor, and manage the supergraph
+- **Security**
+  - Protect the supergraph from intentional and unintentional misuse and other breaches
+- **Reliability**
+  - Design the supergraph for scale and high availability
+- **Performance**
+  - Improve performance of the supergraph for both requests and responses
+- **Developer efficiency**
+  - Improve speed of execution of developers producing and consuming the supergraph
 
-### Assess your graph
+## Assess your graph
 
-The SAF includes an assessment you can take to quantify your supergraph's current state and identify areas for improvement in each of these pillars.
+The SAF includes an assessment you can complete to quantify your supergraph's current state and identify areas for improvement in each of these pillars. Each pillar is broken up into various **Topics**, which each containing a number of **Best Practices**. For each **Best Practice** the Apollo Solutions Architecture team has identified an **Impact** and **Level of Effort** for each.
 
-Check out the [Supergraph Architecture Framework](https://saf.apollographql.com/) to learn more.
+### Impact
+Each **Best Practice** provides different value to your organization and we have loosely identified those with the following values:
+
+* `Low`
+  * Small gains at the indiviual or team level 
+* `Medium`
+  * Changes that can provide noticable value for individuals or teams
+* `High`
+  * Significant value gained across many teams and the orginization
+
+### Level of Effort
+Each **Best Practice** can also have a varied effort to implement or adopt and that is reflected by rough T-shirt sizing estimates:
+
+* `XS` (Extra Small)
+* `S` (Small)
+* `M` (Medium)
+* `L` (Large)
+* `XL` (Extra Large)
+
+## Generating a report
+As you are filling out the assesment your progress will be continually saved, allowing you to come back and finish the assesment at a later date. Once you have finished all of the **Topics**, complete the assesment by hitting the `Mark complete` button. You will then have a completed assesment with the option of downloading a PDF version of your report to share with others in your organization.
+
+## Prioritization
+In your completed assesment you will have a list of **Best Practices** that your team has identified you can work on. Each will have a **Impact** and **Level of Effort**. Typically, you will want to idenitfy the items that have a low level of effort (`XS` or `S`) and then sort them by highest impact. These will allow you to provide value to your supergraph in the quickest fashion. Then for the remaining items you can discuss amongest your team ones that are or are not a concern and when they can be worked on based your timelines.
+
+///// TODO: Another CTA opportunity link
+If you need further assistance or would like to discuss in more detail your assesment, please reach out to your Apollo representative or contact our team (LINKS TODO)
+
