Use RuleExpansionPanel consistently

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -681,7 +681,7 @@ query GetUsers {
   rationale="You can use the `@contact` directive to add your team's contact info to a subgraph schema. This info is displayed in GraphOS Studio, which helps other teams know who to contact for assistance with the subgraph. [Learn more](../graphs/federated-graphs#contact-info-for-subgraphs)."
 >
 
-Use instead:
+This example shows correct `@contact` directive usage:
 <br/>
 
 ```graphql title="schema.graphql" disableCopy=true showLineNumbers=false
