--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -1,56 +1,66 @@
 ---
 title: Supergraph Architecture Framework
-description: Learn about supergraph best practices and assess your graph's current state
+description: Learn about best practices and assess your graph's current state
 ---
 
-The Apollo Supergraph Architecture Framework (SAF) provides a collection of best practices in the key pillars of supergraph development, giving architects and platform teams a roadmap that steers your organization to success. Whether you are just starting with a supergraph or have been in production for years, you can assess what areas of you API strategy line up with the best practices Apollo has identified working with countless engineering teams building their supergraph implementations.
+The Apollo Supergraph Architecture Framework (SAF) provides a collection of best practices in supergraph development. It serves as a roadmap for architecture and platform teams, guiding your organization toward success.
 
-///// TODO: CTA button here instead of small link???
-If you would like to complete the SAF please reach out to your Apollo Customer Success team.
+Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
+
+Contact your Apollo customer success team to learn more or complete the SAF assessment. If you're just getting started with Apollo, don't hesitate to get in touch.
+
+<ButtonLink
+  size="md"
+  colorScheme="indigo"
+  href="https://www.apollographql.com/contact-sales"
+>
+  Contact Apollo
+</ButtonLink>
 
 ## SAF Pillars
 
-SAF's principles and best practices are centered around five pillars:
+SAF centers its principles and best practices around five pillars:
 
-- **Operation excellence**
-  - Efficiently operate, monitor, and manage the supergraph
-- **Security**
-  - Protect the supergraph from intentional and unintentional misuse and other breaches
-- **Reliability**
-  - Design the supergraph for scale and high availability
-- **Performance**
-  - Improve performance of the supergraph for both requests and responses
-- **Developer efficiency**
-  - Improve speed of execution of developers producing and consuming the supergraph
+- **Operational excellence**: Efficiently operate, monitor, and manage your supergraph.
+- **Security**: Protect your supergraph from intentional and unintentional misuse and breaches.
+- **Reliability**: Design your supergraph for scale and high availability.
+- **Performance**: Improve your supergraph's request and response performance.
+- **Developer efficiency**: Boost execution speed for developers producing and consuming the supergraph.
 
 ## Assess your graph
 
-The SAF includes an assessment you can complete to quantify your supergraph's current state and identify areas for improvement in each of these pillars. Each pillar is broken up into various **Topics**, which each containing a number of **Best Practices**. For each **Best Practice** the Apollo Solutions Architecture team has identified an **Impact** and **Level of Effort** for each.
+The SAF includes an assessment that lets you quantify your supergraph's current state and identify areas for improvement. We break down each pillar into topics, such as schema design, organizational structure, and supergraph onboarding. SAF automatically saves your progress, allowing you to return to questions and finish the assessment later.
 
-### Impact
-Each **Best Practice** provides different value to your organization and we have loosely identified those with the following values:
+### Report generation
 
-* `Low`
-  * Small gains at the indiviual or team level 
-* `Medium`
-  * Changes that can provide noticable value for individuals or teams
-* `High`
-  * Significant value gained across many teams and the orginization
+To generate a report, finalize your responses by clicking **Save** for each one. You can then click **Mark complete** on your assessment in the left sidebar. A download icon appears so you can download and share the report with others in your organization.
 
-### Level of Effort
-Each **Best Practice** can also have a varied effort to implement or adopt and that is reflected by rough T-shirt sizing estimates:
+The assessment rates your supergraph on the [five pillars](#saf-pillars) and offers an improvement plan with best practices to implement. Each best practice has an [impact](#impact) and [level of effort](#level-of-effort) you can use to prioritize your next steps.
 
-* `XS` (Extra Small)
-* `S` (Small)
-* `M` (Medium)
-* `L` (Large)
-* `XL` (Extra Large)
+#### Impact
 
-## Generating a report
-As you are filling out the assesment your progress will be continually saved, allowing you to come back and finish the assesment at a later date. Once you have finished all of the **Topics**, complete the assesment by hitting the `Mark complete` button. You will then have a completed assesment with the option of downloading a PDF version of your report to share with others in your organization.
+Each best practice provides a different amount of impact to your organization. The impact ratings are:
 
-## Prioritization
-In your completed assesment you will have a list of **Best Practices** that your team has identified you can work on. Each will have a **Impact** and **Level of Effort**. Typically, you will want to idenitfy the items that have a low level of effort (`XS` or `S`) and then sort them by highest impact. These will allow you to provide value to your supergraph in the quickest fashion. Then for the remaining items you can discuss amongest your team ones that are or are not a concern and when they can be worked on based your timelines.
+- **Low**: Small gains at the individual or team level
+- **Medium**: Changes that can provide noticeable value for individuals or teams
+- **High**: Significant value gained across many teams and the organization
 
-///// TODO: Another CTA opportunity link
-If you need further assistance or would like to discuss in more detail your assesment, please reach out to your Apollo representative or contact our team (LINKS TODO)
+#### Effort levels
+
+Each best practice has an associated effort level for its implementation. The effort levels use "T-shirt size" estimates ranging from extra small (XS) to extra large (XL).
+
+## Next steps
+
+Typically, you should identify best practices with low effort (XS or S) and sort them by highest impact. Actioning best practices in this order provides the highest impact on your supergraph as quickly as possible. Discuss higher-effort (M to XL) items with your team to determine priorities and timelines.
+
+After you've made progress on your improvement plan, you can retake the assessment to assess your supergraph's new state.
+
+If you would like to discuss your assessment in detail, contact your Apollo customer success team. If you're just getting started with Apollo, don't hesitate to get in touch.
+
+<ButtonLink
+  size="md"
+  colorScheme="indigo"
+  href="https://www.apollographql.com/contact-sales"
+>
+  Contact Apollo
+</ButtonLink>
