--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -7,7 +7,7 @@ The Apollo Supergraph Architecture Framework (SAF) provides a collection of best
 
 Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
 
-Contact your Apollo customer success team to learn more or complete the SAF assessment. If you're just getting started with Apollo, don't hesitate to get in touch.
+Contact your Apollo customer success team to complete the SAF assessment or to learn more. If you're just getting started with Apollo, don't hesitate to get in touch.
 
 <ButtonLink
   size="md"
@@ -33,13 +33,13 @@ The SAF includes an assessment that lets you quantify your supergraph's current 
 
 ### Report generation
 
-To generate a report, finalize your responses by clicking **Save** for each one. You can then click **Mark complete** on your assessment in the left sidebar. A download icon appears so you can download and share the report with others in your organization.
+To generate a report, finalize your responses by clicking **Save** on each one. Once you've saved a response for topic, you can click **Mark complete** on your assessment in the left sidebar. A download icon appears so you can download and share the report with others in your organization.
 
 The assessment rates your supergraph on the [five pillars](#saf-pillars) and offers an improvement plan with best practices to implement. Each best practice has an [impact](#impact) and [level of effort](#level-of-effort) you can use to prioritize your next steps.
 
 #### Impact
 
-Each best practice provides a different amount of impact to your organization. The impact ratings are:
+The impact ratings are:
 
 - **Low**: Small gains at the individual or team level
 - **Medium**: Changes that can provide noticeable value for individuals or teams
@@ -47,7 +47,7 @@ Each best practice provides a different amount of impact to your organization. T
 
 #### Effort levels
 
-Each best practice has an associated effort level for its implementation. The effort levels use "T-shirt size" estimates ranging from extra small (XS) to extra large (XL).
+The effort levels use "T-shirt size" estimates ranging from extra small (XS) to extra large (XL).
 
 ## Next steps
 
