Apply suggestions from code review
Co-authored-by: Nicolas Moutschen <nicolas.moutschen@gmail.com>

--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -551,7 +551,7 @@ Once you configure an AWS VPC Lattice service to accept traffic from the Apollo 
 - Cloud Routers only have permission to invoke private subgraphs listed in their graph variant configuration.
 
 You can further restrict access to your private subgraphs by configuring additional [conditions](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_policies_elements_condition.html) in your service's authorization policy.
-Specifically, you can add conditions to restrict traffic based on your organization's Apollo account ID or your subgraph's graph ref.
+Specifically, you can add conditions to restrict traffic based on your organization's Apollo account ID or your supergraph's graph ref.
 
 ### Update a Lattice service's authorization policy
 
