--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -3,11 +3,11 @@ title: Supergraph Architecture Framework
 description: Learn about best practices and assess your graph's current state
 ---
 
-The Apollo Supergraph Architecture Framework (SAF) provides a collection of best practices in supergraph development. It serves as a roadmap for architecture and platform teams, guiding your organization toward success.
+The Apollo Supergraph Architecture Framework (SAF) provides a collection of best practices in supergraph development. It serves as a roadmap for architecture and platform teams, guiding your organization toward an optimal supergraph implementation.
 
-Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
+The SAF includes an assessment to quantify your supergraph's current state and identify areas for improvement. Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
 
-Contact your Apollo customer success team to complete the SAF assessment or to learn more. If you're just getting started with Apollo, don't hesitate to get in touch.
+Contact your Apollo customer success team to complete the SAF assessment. If you're just getting started with Apollo, don't hesitate to get in touch.
 
 <ButtonLink
   size="md"
@@ -29,7 +29,7 @@ SAF centers its principles and best practices around five pillars:
 
 ## Assess your graph
 
-The SAF includes an assessment that lets you quantify your supergraph's current state and identify areas for improvement. We break down each pillar into topics, such as schema design, organizational structure, and supergraph onboarding. SAF automatically saves your progress, allowing you to return to questions and finish the assessment later.
+The SAF assessment breaks down each pillar into questions on topics like schema design, organizational structure, and supergraph onboarding. SAF automatically saves your progress, allowing you to return and finish the assessment later.
 
 ### Report generation
 
@@ -51,16 +51,6 @@ The effort levels use "T-shirt size" estimates ranging from extra small (XS) to 
 
 ## Next steps
 
-Typically, you should identify best practices with low effort (XS or S) and sort them by highest impact. Actioning best practices in this order provides the highest impact on your supergraph as quickly as possible. Discuss higher-effort (M to XL) items with your team to determine priorities and timelines.
+Typically, you should identify best practices with low effort (XS or S) and sort them by highest impact. Actioning best practices in this order provides the highest impact on your supergraph as quickly as possible. Discuss higher-effort (M to XL) items with your team to determine priorities and timelines. If you would like to discuss your assessment in detail, contact your Apollo customer success team.
 
 After you've made progress on your improvement plan, you can retake the assessment to assess your supergraph's new state.
-
-If you would like to discuss your assessment in detail, contact your Apollo customer success team. If you're just getting started with Apollo, don't hesitate to get in touch.
-
-<ButtonLink
-  size="md"
-  colorScheme="indigo"
-  href="https://www.apollographql.com/contact-sales"
->
-  Contact Apollo
-</ButtonLink>
